# yakka

./: .gitignore  Doxyfile  Makefile.am  README  configure.ac
test/: Makefile.am  main.c  test_error.c  test_interface.c  test_members.c  test_method.c  test_object.c  test_weak_ref.c
test/ootest/: Alpha-protected.h  Alpha.c  Alpha.h  Beta.c  Beta.h  Delta-protected.h  Delta.c  Delta.h  Gamma-protected.h  Gamma.c  Gamma.h  Makefile.am
yakka/: .gitignore  Error-protected.h  Error.c  Error.h  Interface.h  Makefile.am  MethodList.c  MethodList.h  Object-protected.h  Object.c  Object.h  Runtime.c  Runtime.h  WeakRef-protected.h  WeakRef.c  WeakRef.h  Yakka.h  lib.c  libyakka-0.1.pc.in  libyakka-0.pc.in  yakka.h
